# 2026Agent-Based-Code-Repair

./: .gitignore  requirements.txt
formal-benchmark/: README.md
proofbench-pipeline/: README.md  config.qwen_smoke.yaml  config.yaml  pyproject.toml  requirements.txt
proofbench-pipeline/analysis/: compare.py
proofbench-pipeline/configs/: lean.yaml  model.yaml  model_ubelix.yaml  proofbench_pilot.yaml
proofbench-pipeline/configs/experiments/: minif2f_reference_formalization.yaml
proofbench-pipeline/data/: smoke_minif2f.jsonl
proofbench-pipeline/data/formalized/: ref_cache.json
proofbench-pipeline/experiments/: run.py
proofbench-pipeline/lean_project/: ProofbenchLean.lean  lakefile.toml
proofbench-pipeline/prompts/: cot_generation.txt  cot_to_lean.txt  direct_lean.txt  mixed_cot_lean.txt  reference_to_lean.txt
proofbench-pipeline/reports/: final_report.md  proposal.md
proofbench-pipeline/results/pilot_qwen2_5_coder_20260610_124652/: S1_CoT_agent.json  S1_CoT_noagent.json  S2_Direct_agent.json  S2_Direct_noagent.json  S3_Interleaved_agent.json  S3_Interleaved_noagent.json  comparison.csv  summary.json
proofbench-pipeline/scripts/: prepare_data.py  prepare_minif2f_data.py  run_10_samples.py  run_full.py  run_proofbench.sh  run_proofbench_ubelix.sbatch  run_reference_formalization.py  summarize_results.py
proofbench-pipeline/src/: code_extractor.py  data_loader.py  error_classifier.py  evaluator.py  lean_runner.py  pipeline.py  prompt_builder.py
proofbench-pipeline/src/agent/: repair_loop.py
proofbench-pipeline/src/data/: loader.py  schemas.py
(+147 files in other folders)
